fix logo spacing

--- a/src/CharacterSheet.css
+++ b/src/CharacterSheet.css
@@ -6,24 +6,28 @@
     width: 40px;
     height: 40px;
     margin-right: 5px;
+    object-fit: contain;
 }
 
 .exp-sprite-double-wide {
     width: 60px;
     height: 40px;
     margin-right: 5px;
+    object-fit: contain;
 }
 
 .exp-sprite-triple-wide {
     width: 80px;
     height: 40px;
     margin-right: 5px;
+    object-fit: contain;
 }
 
 .exp-sprite-super-wide {
     width: 120px;
     height: 40px;
     margin-right: 5px;
+    object-fit: contain;
 }
 
 .stardew-border {
